cluster/apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      annotations:
        media.rcrumana.xyz/identity-revision: "2026-08-05-sso-auth-4.0.0.4"
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: eva-3
      tolerations:
        - key: homelab.rcrumana.xyz/storage
          operator: Equal
          value: "true"
          effect: NoSchedule
      dnsPolicy: ClusterFirstWithHostNet
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: plex
              topologyKey: kubernetes.io/hostname
      securityContext:
        supplementalGroups:
          - 989
          - 985
      containers:
        - name: jellyfin
          image: harbor.rcrumana.xyz/mirror/linuxserver/jellyfin:10.11.3ubu2404-ls9
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
            - name: https
              containerPort: 8920
              protocol: TCP
            - name: discovery
              containerPort: 7359
              protocol: UDP
            - name: dlna
              containerPort: 1900
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media-library
              mountPath: /tv
              subPath: Torrent/Shows
            - name: media-library
              mountPath: /movies
              subPath: Torrent/Movies
            - name: media-library
              mountPath: /music
              subPath: Torrent/Music
          resources:
            requests:
              memory: "4Gi"
              cpu: "500m"
            limits:
              memory: "12Gi"
              cpu: "24"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-critical
        - name: cache
          emptyDir: {}
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library-bulk
