cluster/apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
  annotations:
    metallb.io/address-pool: default-pool
    metallb.io/allow-shared-ip: "true"
    media.rcrumana.xyz/identity-bootstrap-revision: "2026-08-06-user-hardening"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.233
  selector:
    app: jellyfin
  ports:
    - name: web-http
      port: 8096
      targetPort: 8096
      protocol: TCP
    - name: web-https
      port: 8920
      targetPort: 8920
      protocol: TCP
    - name: discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
